--- a/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
+++ b/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-		<UseWPF>true</UseWPF>
+	  <RootNamespace>Engineering_BIM_Team_Tab</RootNamespace>  <!-- Updated namespace -->
+	  <UseWPF>true</UseWPF>
 		<UseWindowsForms>true</UseWindowsForms>
 		<LangVersion>latest</LangVersion>
 		<PlatformTarget>x64</PlatformTarget>
@@ -9,7 +10,7 @@
 		<PublishAddinFiles>true</PublishAddinFiles>
 		<Configurations>Debug-2020;Debug-2021;Debug-2022;Debug-2023;Debug-2024;Debug-2025</Configurations>
 		<Configurations>$(Configurations);Release-2020;Release-2021;Release-2022;Release-2023;Release-2024;Release-2025</Configurations>
-		<Nullable>enable</Nullable>
+		<Nullable>disable</Nullable>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
 		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
@@ -82,6 +83,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <PackageReference Include="EPPlus" Version="7.2.2" />
 	  <PackageReference Include="System.Drawing.Common" Version="8.0.3" IncludeAssets="build; compile" PrivateAssets="All" />
 	  <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
 	</ItemGroup>
@@ -137,6 +139,65 @@ echo ********* PostBuild Events End *********</PostBuildEvent>
 		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 		<Copyright>2024</Copyright>
 	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2020|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2021|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2022|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2023|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2024|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2025|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2020|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2021|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2022|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2023|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2024|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2025|AnyCPU'">
+	  <NoWarn>1701;1702;CS8632</NoWarn>
+	</PropertyGroup>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\RevitRibbon_MainSourceCode_Resources\RevitRibbon_MainSourceCode_Resources.csproj" />
+	</ItemGroup>
+
+  <!--<ItemGroup>
+	  <Reference Include="Microsoft.VisualBasic" />
+	</ItemGroup>-->
+  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+    <Reference Include="Microsoft.VisualBasic" />
+  </ItemGroup>
 	
 	<ItemGroup>
 	  <Compile Update="Properties\Resources.Designer.cs">
