--- a/03.Engineering_Mechanical_Tab/03.Engineering_Mechanical_Tab.csproj
+++ b/03.Engineering_Mechanical_Tab/03.Engineering_Mechanical_Tab.csproj
@@ -1,234 +1,98 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  
+  <PropertyGroup>
+    <RootNamespace>Engineering_Mechanical_Tab</RootNamespace>  <!-- Updated namespace -->
+    <RootProjectName>03.Engineering_Mechanical_Tab</RootProjectName>
+  </PropertyGroup>
+
+  <!-- Add your specific resources and any project-specific configurations here -->
+  <ItemGroup>
+    <Resource Include="Resources\Blue_16.png" />
+    <Resource Include="Resources\Blue_32.png" />
+    <Resource Include="Resources\Green_16.png" />
+    <Resource Include="Resources\Green_32.png" />
+    <Resource Include="Resources\Red_16.png" />
+    <Resource Include="Resources\Red_32.png" />
+    <Resource Include="Resources\Yellow_16.png" />
+    <Resource Include="Resources\Yellow_32.png" />
+  </ItemGroup>
 
   <PropertyGroup>
-	  <RootNamespace>Engineering_Mechanical_Tab</RootNamespace>  <!-- Updated namespace -->
-	  <UseWPF>true</UseWPF>
-		<UseWindowsForms>true</UseWindowsForms>
-		<LangVersion>latest</LangVersion>
-		<PlatformTarget>x64</PlatformTarget>
-		<ImplicitUsings>true</ImplicitUsings>
-		<PublishAddinFiles>true</PublishAddinFiles>
-		<Configurations>Debug-2020;Debug-2021;Debug-2022;Debug-2023;Debug-2024;Debug-2025</Configurations>
-		<Configurations>$(Configurations);Release-2020;Release-2021;Release-2022;Release-2023;Release-2024;Release-2025</Configurations>
-		<Nullable>disable</Nullable>
-    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
-		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
-  </PropertyGroup>
-  
-  <PropertyGroup Condition="$(Configuration.Contains('-2020'))">
-		<RevitVersion>2020</RevitVersion>
-    <TargetFramework>net48</TargetFramework>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2020</DefineConstants>
-  </PropertyGroup>
-	<PropertyGroup Condition="$(Configuration.Contains('-2021'))">
-		<RevitVersion>2021</RevitVersion>
-    <TargetFramework>net48</TargetFramework>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2021</DefineConstants>
-  </PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('-2022'))">
-    <RevitVersion>2022</RevitVersion>
-    <TargetFramework>net48</TargetFramework>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2022</DefineConstants>
-	</PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('-2023'))">
-    <RevitVersion>2023</RevitVersion>
-    <TargetFramework>net48</TargetFramework>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2023</DefineConstants>
-	</PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('-2024'))">
-		<RevitVersion>2024</RevitVersion>
-    <TargetFramework>net48</TargetFramework>
-		<EnableNETAnalyzers>false</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2024</DefineConstants>
-	</PropertyGroup>
-    <PropertyGroup Condition="$(Configuration.Contains('-2025'))">
-    <RevitVersion>2025</RevitVersion>
-    <TargetFramework>net8.0-windows</TargetFramework>
-		<EnableNETAnalyzers>true</EnableNETAnalyzers>
-		<DefineConstants>$(DefineConstants);REVIT2025</DefineConstants>
-  </PropertyGroup>
-	
-	<PropertyGroup Condition="$(Configuration.Contains('Debug'))">
-		<Optimize>False</Optimize>
-		<OutputPath>bin\Debug\$(RevitVersion)</OutputPath>
-		<DebugType>Full</DebugType>
-	</PropertyGroup>
-	<PropertyGroup Condition="$(Configuration.Contains('Release'))">
-		<Optimize>True</Optimize>
-		<OutputPath>bin\Release\$(RevitVersion)</OutputPath>
-		<DebugType>None</DebugType>
-	</PropertyGroup>
+    <PostBuildEvent>echo ********* PostBuild Events Start *********
+set ROOTPROJECTNAME=$(RootProjectName)
+set MSBUILDPROJECTDIR=$(MSBuildProjectDirectory)
+set OUTPUTBINDIR=%MSBUILDPROJECTDIR%\$(OutputPath)
+set REVITVERSION=$(RevitVersion)
+set APPDATA_AUTODESK_REVIT_ADDINS_YEAR=$(AppData)\Autodesk\REVIT\Addins\%REVITVERSION%
+set APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME=%APPDATA_AUTODESK_REVIT_ADDINS_YEAR%\%ROOTPROJECTNAME%
+set DotAddingFileDir=C:\MyRevitAddins\%ROOTPROJECTNAME%\%REVITVERSION%
+set RibbonXmlAndDLLFolder=C:\MyRevitAddins\%ROOTPROJECTNAME%\%REVITVERSION%
 
-	<PropertyGroup>
-		<Version>$(RevitVersion)</Version>
-    <StartAction>Program</StartAction>
-    <StartProgram>$(ProgramW6432)\Autodesk\Revit $(RevitVersion)\Revit.exe</StartProgram>
-    <StartArguments>/language ENG</StartArguments>
-	</PropertyGroup>
+echo ******** Project Info *********
+echo *** Configuration     : $(Configuration)
+echo *** Project directory : %MSBUILDPROJECTDIR%
+echo *** DLLs Directory    : %OUTPUTBINDIR%
 
-	<ItemGroup>
-	  <Resource Include="Resources\Blue_16.png" />
-	  <Resource Include="Resources\Blue_32.png" />
-	  <Resource Include="Resources\Green_16.png" />
-	  <Resource Include="Resources\Green_32.png" />
-	  <Resource Include="Resources\Red_16.png" />
-	  <Resource Include="Resources\Red_32.png" />
-	  <Resource Include="Resources\Yellow_16.png" />
-	  <Resource Include="Resources\Yellow_32.png" />
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <PackageReference Include="EPPlus" Version="7.2.2" />
-	  <PackageReference Include="System.Drawing.Common" Version="8.0.3" IncludeAssets="build; compile" PrivateAssets="All" />
-	  <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
-	</ItemGroup>
-	
-	<PropertyGroup>
-	<PostBuildEvent>echo ********* PostBuild Events Start *********
-echo *** Configuration: $(Configuration)
-echo *** Copying results to Revit version directory: $(RevitVersion)
-echo *** Project directory: $(MSBuildProjectDirectory)
-
+echo.
+if "$(Configuration.Contains('Debug'))" == "True" (
+echo ====================================================
+echo *** Debug Configuration detected.
+echo.
+echo ******** Copy Files to User Profile *********
 echo *** Checking if Addins directory exists for Revit version: $(RevitVersion)
-if not exist "$(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)\03.Engineering_Mechanical_Tab" (
-echo *** Directory does not exist. Creating directory: $(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)\03.Engineering_Mechanical_Tab
-mkdir "$(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)\03.Engineering_Mechanical_Tab" 
+if not exist "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%" (
+echo *** Directory does not exist. Creating directory: %APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%
+mkdir "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%"
 ) else (
-echo *** Directory already exists: $(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)\03.Engineering_Mechanical_Tab
+echo *** Directory already exists: %APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%
 )
 echo.
-echo *** Copying .addin files 
-echo --- from: $(MSBuildProjectDirectory) 
-echo --- to  : $(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)
-copy "$(MSBuildProjectDirectory)\*.addin" "$(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)"
+echo *** Copying .addin files
+echo --- from: %MSBUILDPROJECTDIR%
+echo --- to  : %APPDATA_AUTODESK_REVIT_ADDINS_YEAR%
+copy "%MSBUILDPROJECTDIR%\*.addin" "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR%"
 echo.
-echo *** Copying .dll files 
-echo --- from: $(TargetDir) 
-echo --- to  : $(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)
-copy "$(TargetDir)*.dll" "$(AppData)\Autodesk\REVIT\Addins\$(RevitVersion)\03.Engineering_Mechanical_Tab"
+echo *** Copying .dll files
+echo --- from: $(OutputPath)
+echo --- to  :%APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%
+copy "%OUTPUTBINDIR%\*.dll" "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%"
+)
+
 echo.
+if "$(Configuration.Contains('Release'))" == "True" (
 echo ====================================================
-    set DotAddingFileDir=C:\MyRevitAddins\03.Engineering_Mechanical_Tab\DotAddingFileDir
-    set RibbonXmlAndDLLFolder=C:\MyRevitAddins\03.Engineering_Mechanical_Tab\RibbonXmlAndDLLFolder
+echo *** Release Configuration detected.
+echo.
+echo ******** Copy Files to other locations *********
 
-    if "$(Configuration.Contains('Release'))" == "True" (
-    echo *** Release Configuration detected.
 
-    if not exist "%DotAddingFileDir%" (
-    echo *** Creating %DotAddingFileDir%
-    mkdir "%DotAddingFileDir%"
-    )
-    echo *** Copying .addin files to %DotAddingFileDir%
-    copy "$(MSBuildProjectDirectory)\*.addin" "%DotAddingFileDir%\"
+if not exist "%DotAddingFileDir%" (
+echo *** Creating %DotAddingFileDir%
+mkdir "%DotAddingFileDir%"
+)
+echo.
+echo ******** Copying .addin files to: %DotAddingFileDir%
+copy "%MSBUILDPROJECTDIR%\*.addin" "%DotAddingFileDir%\"
 
-    if not exist "%RibbonXmlAndDLLFolder%" (
-    echo *** Creating %RibbonXmlAndDLLFolder%
-    mkdir "%RibbonXmlAndDLLFolder%"
-    )
-    echo *** Copying .ribbon and .dll files to %RibbonXmlAndDLLFolder%
-    copy "$(TargetDir)*.dll" "%RibbonXmlAndDLLFolder%\"
-    copy "$(MSBuildProjectDirectory)\*.ribbon" "%RibbonXmlAndDLLFolder%\"
-    )
+if not exist "%RibbonXmlAndDLLFolder%" (
+echo *** Creating %RibbonXmlAndDLLFolder%
+mkdir "%RibbonXmlAndDLLFolder%"
+)
+echo.
+echo ******** Copying .ribbon and .dll files to:  %RibbonXmlAndDLLFolder%
+copy "%OUTPUTBINDIR%\*.dll" "%RibbonXmlAndDLLFolder%\"
+copy "%MSBUILDPROJECTDIR%\*.ribbon" "%RibbonXmlAndDLLFolder%\"
+)
+
 echo ********* PostBuild Events End *********</PostBuildEvent>
-		<RunAnalyzersDuringBuild>False</RunAnalyzersDuringBuild>
-		<RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
-		<Copyright>2024</Copyright>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2020|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2021|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2022|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2023|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2024|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug-2025|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2020|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2021|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2022|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2023|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2024|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release-2025|AnyCPU'">
-	  <NoWarn>1701;1702;CS8632</NoWarn>
-	</PropertyGroup>
-	
-	<ItemGroup>
-	  <ProjectReference Include="..\RevitRibbon_MainSourceCode_Resources\RevitRibbon_MainSourceCode_Resources.csproj" />
-	</ItemGroup>
+  </PropertyGroup>
 
-  <!--<ItemGroup>
-	  <Reference Include="Microsoft.VisualBasic" />
-	</ItemGroup>-->
-  <ItemGroup Condition="'$(TargetFramework)' == 'net48'">
-    <Reference Include="Microsoft.VisualBasic" />
+  <!-- Import the shared project items -->
+  <Import Project="..\RevitRibbon_MainSourceCode\RevitRibbon_MainSourceCode.projitems" Label="Shared" />
+	
+  <!-- Common Project References -->
+  <ItemGroup>
+    <ProjectReference Include="..\RevitRibbon_MainSourceCode_Resources\RevitRibbon_MainSourceCode_Resources.csproj" />
   </ItemGroup>
-	
-	<ItemGroup>
-	  <Compile Update="Properties\Resources.Designer.cs">
-	    <DesignTime>True</DesignTime>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>Resources.resx</DependentUpon>
-	  </Compile>
-	  <Compile Update="Properties\Settings.Designer.cs">
-	    <DesignTimeSharedInput>True</DesignTimeSharedInput>
-	    <AutoGen>True</AutoGen>
-	    <DependentUpon>Settings.settings</DependentUpon>
-	  </Compile>
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <EmbeddedResource Update="Properties\Resources.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
-	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-	  </EmbeddedResource>
-	</ItemGroup>
-	
-	<ItemGroup>
-	  <None Update="Properties\Settings.settings">
-	    <Generator>SettingsSingleFileGenerator</Generator>
-	    <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-	  </None>
-	  <None Update="RegisterAddin.addin">
-	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  </None>
-	</ItemGroup>
-	
-	<Import Project="..\RevitRibbon_MainSourceCode\RevitRibbon_MainSourceCode.projitems" Label="Shared" />
-  
+
 </Project>
