--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -20,35 +20,35 @@
   <PropertyGroup Condition="$(Configuration.Contains('-2020'))">
     <RevitVersion>2020</RevitVersion>
     <TargetFramework>net48</TargetFramework>
-    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2020</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration.Contains('-2021'))">
     <RevitVersion>2021</RevitVersion>
     <TargetFramework>net48</TargetFramework>
-    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2021</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration.Contains('-2022'))">
     <RevitVersion>2022</RevitVersion>
     <TargetFramework>net48</TargetFramework>
-    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2022</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration.Contains('-2023'))">
     <RevitVersion>2023</RevitVersion>
     <TargetFramework>net48</TargetFramework>
-    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2023</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="$(Configuration.Contains('-2024'))">
     <RevitVersion>2024</RevitVersion>
     <TargetFramework>net48</TargetFramework>
-    <EnableNETAnalyzers>false</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2024</DefineConstants>
   </PropertyGroup>
 
