--- a/RevitRibbon_MainSourceCode_Resources/RevitRibbon_MainSourceCode_Resources.csproj
+++ b/RevitRibbon_MainSourceCode_Resources/RevitRibbon_MainSourceCode_Resources.csproj
@@ -5,14 +5,29 @@
   </PropertyGroup>
   
 	<ItemGroup>
-	  <Resource Include="Resources\Blue_16.png" />
-	  <Resource Include="Resources\Blue_32.png" />
-	  <Resource Include="Resources\Green_16.png" />
-	  <Resource Include="Resources\Green_32.png" />
-	  <Resource Include="Resources\Red_16.png" />
-	  <Resource Include="Resources\Red_32.png" />
-	  <Resource Include="Resources\Yellow_16.png" />
-	  <Resource Include="Resources\Yellow_32.png" />
+	  <EmbeddedResource Include="Resources\Blue_16.png" />
+	  <EmbeddedResource Include="Resources\Blue_32.png" />
+	  <EmbeddedResource Include="Resources\Green_16.png" />
+	  <EmbeddedResource Include="Resources\Green_32.png" />
+	  <EmbeddedResource Include="Resources\Red_16.png" />
+	  <EmbeddedResource Include="Resources\Red_32.png" />
+	  <EmbeddedResource Include="Resources\Yellow_16.png" />
+	  <EmbeddedResource Include="Resources\Yellow_32.png" />
+	</ItemGroup>
+  
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+  
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
 	</ItemGroup>
   
 </Project>
