Checkpoing - 2025 Release BIM Team Tab is working now.

--- a/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
+++ b/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
@@ -15,8 +15,8 @@
       set REVITVERSION=$(RevitVersion)
       set APPDATA_AUTODESK_REVIT_ADDINS_YEAR=$(AppData)\Autodesk\REVIT\Addins\%REVITVERSION%
       set APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME=%APPDATA_AUTODESK_REVIT_ADDINS_YEAR%\%ROOTPROJECTNAME%
-      set DotAddingFileDir=C:\MyRevitAddins\%ROOTPROJECTNAME%\%REVITVERSION%
-      set RibbonXmlAndDLLFolder=C:\MyRevitAddins\%ROOTPROJECTNAME%\%REVITVERSION%
+      set DotAddingFileDir=C:\MyRevitAddins\Engineering\BIM Team
+      set RibbonXmlAndDLLFolder=C:\MyRevitAddins\Engineering\BIM Team\%REVITVERSION%
 
       echo ******** Project Info *********
       echo *** Configuration     : $(Configuration)
@@ -37,10 +37,10 @@
       echo *** Directory already exists: %APPDATA_AUTODESK_REVIT_ADDINS_YEAR_PROJECTNAME%
       )
       echo.
-      echo *** Copying .addin files
+      echo *** Copying *Tab.addin files
       echo --- from: %MSBUILDPROJECTDIR%
       echo --- to  : %APPDATA_AUTODESK_REVIT_ADDINS_YEAR%
-      copy "%MSBUILDPROJECTDIR%\*.addin" "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR%"
+      copy "%MSBUILDPROJECTDIR%\*Tab.addin" "%APPDATA_AUTODESK_REVIT_ADDINS_YEAR%"
       echo.
       echo *** Copying .dll files
       echo --- from: $(OutputPath)
@@ -61,8 +61,8 @@
       mkdir "%DotAddingFileDir%"
       )
       echo.
-      echo ******** Copying .addin files to: %DotAddingFileDir%
-      copy "%MSBUILDPROJECTDIR%\*.addin" "%DotAddingFileDir%\"
+      echo ******** Copying *%REVITVERSION%.addin files to: %DotAddingFileDir%
+      copy "%MSBUILDPROJECTDIR%\*%REVITVERSION%.addin" "%DotAddingFileDir%\"
 
       if not exist "%RibbonXmlAndDLLFolder%" (
       echo *** Creating %RibbonXmlAndDLLFolder%
