EPPlush is working only for 2020-2024, but not for 2025. This is used in the Schedule Exports and Imports

--- a/00.Template_Tab/00.Template_Tab.csproj
+++ b/00.Template_Tab/00.Template_Tab.csproj
@@ -80,6 +80,9 @@
 
   <!-- Import the shared project items -->
   <Import Project="..\RevitRibbon_MainSourceCode\RevitRibbon_MainSourceCode.projitems" Label="Shared" />
+  <ItemGroup>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+  </ItemGroup>
 
   <!-- Common Project References -->
   <ItemGroup>
