--- a/01.ConTech_Tab/01.ConTech_Tab.csproj
+++ b/01.ConTech_Tab/01.ConTech_Tab.csproj
@@ -77,9 +77,13 @@
       echo ********* PostBuild Events End *********
     </PostBuildEvent>
   </PropertyGroup>
-
+  
+  
   <!-- Import the shared project items -->
   <Import Project="..\RevitRibbon_MainSourceCode\RevitRibbon_MainSourceCode.projitems" Label="Shared" />
+  <ItemGroup>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+  </ItemGroup>
 
   <!-- Common Project References -->
   <ItemGroup>
