--- a/RevitRibbon_MainSourceCode_Resources/RevitRibbon_MainSourceCode_Resources.csproj
+++ b/RevitRibbon_MainSourceCode_Resources/RevitRibbon_MainSourceCode_Resources.csproj
@@ -16,6 +16,10 @@
 	</ItemGroup>
   
 	<ItemGroup>
+	  <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+	</ItemGroup>
+  
+	<ItemGroup>
 	  <Compile Update="Properties\Resources.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
