Cmd_SchedulesExport is working now

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -85,11 +85,22 @@
     <NoWarn>1701;1702;CS8632</NoWarn>
   </PropertyGroup>
 
+  <!--<PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
+  </PropertyGroup>-->
+  
   <!-- Common Package References -->
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.2.2"/>
     <PackageReference Include="System.Drawing.Common" Version="8.0.3" IncludeAssets="build; compile" PrivateAssets="All" />
     <PackageReference Include="Revit_All_Main_Versions_API_x64" Version="$(RevitVersion).*" IncludeAssets="build; compile" PrivateAssets="All" />
+    <PackageReference Include="Revit_All_Main_Versions_API_x64"  IncludeAssets="build; compile" PrivateAssets="All" />
+
+      <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
+      <PackageReference Include="System.Text.Encoding.CodePages" />
+
+    
   </ItemGroup>
 
   <!--<Target Name="CopyNuGetPackageDlls"  BeforeTargets="PostBuildEvent">
@@ -99,7 +110,11 @@
       <PackageDlls Include="$(UserProfile)\.nuget\packages\epplus.interfaces\6.1.1\lib\net7.0\EPPlus.Interfaces.dll" />
       <PackageDlls Include="$(UserProfile)\.nuget\packages\epplus.system.drawing\6.1.1\lib\net462\EPPlus.System.Drawing.dll" />
       <PackageDlls Include="$(UserProfile)\.nuget\packages\microsoft.io.recyclablememorystream\3.0.0\lib\net6.0\Microsoft.IO.RecyclableMemoryStream.dll" />
-      <PackageDlls Include="$(UserProfile)\.nuget\packages\system.text.encoding.codepages\8.0.0\lib\net462\System.Text.Encoding.CodePages.dll" />
+      <PackageDlls Include="$(UserProfile)\.nuget\packages\system.text.
+      
+      
+      
+      ing.codepages\8.0.0\lib\net462\System.Text.Encoding.CodePages.dll" />
       <PackageDlls Include="$(UserProfile)\.nuget\packages\system.drawing.common\8.0.3\lib\net462\System.Drawing.Common.dll" />
       
       --><!-- Add other DLLs as necessary --><!--
