--- a/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
+++ b/02.Engineering_BIM_Team_Tab/02.Engineering_BIM_Team_Tab.csproj
@@ -88,9 +88,6 @@
     <Page Remove="4d1ff7321eb0731aae678ed9ea019375c81c83badd7a50c85d81d663793b5cd5\**" />
   </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Text.Encoding.CodePages" Version="8.0.0" />
-  </ItemGroup>
 
   <!-- Common Project References -->
   <ItemGroup>
@@ -98,10 +95,10 @@
   </ItemGroup>
   <ItemGroup>
   
-    <PackageReference Update="System.Drawing.Common" Version="8.0.8">
+    <!--<PackageReference Update="System.Drawing.Common" Version="8.0.8">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>compile; build</IncludeAssets>
-    </PackageReference>
+    </PackageReference>-->
   </ItemGroup>
 
 </Project>
