--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -55,7 +55,7 @@
 
   <PropertyGroup Condition="$(Configuration.Contains('-2025'))">
     <RevitVersion>2025</RevitVersion>
-    <TargetFramework>net8.0-windows</TargetFramework>
+    <TargetFramework>net8.0-windows;net8.0</TargetFramework>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <DefineConstants>$(DefineConstants);REVIT2025</DefineConstants>
   </PropertyGroup>
